force-app/main/default/objects/EnvironmentHubMember/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hub Members</relationshipLabel>
    <relationshipName>Hub_Members</relationshipName>
    <type>Lookup</type>
</CustomField>