force-app/main/default/objects/EnvironmentHubMember/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MemberEntity</columns>
    <columns>DisplayName</columns>
    <columns>SsoStatus</columns>
    <columns>MemberType</columns>
    <columns>OrgStatus</columns>
    <columns>OrgEdition</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>