force-app/main/default/objects/EnvironmentHubMember/listViews/Developer_Edition.listView-meta.xml
<ListView>
    <fullName>Developer_Edition</fullName>
    <columns>MemberEntity</columns>
    <columns>DisplayName</columns>
    <columns>SsoStatus</columns>
    <columns>MemberType</columns>
    <columns>OrgStatus</columns>
    <columns>OrgEdition</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrgEdition</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Developer Edition</label>
</ListView>