force-app/main/default/objects/EnvironmentHubMember/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>MemberEntity</columns>
    <columns>Description</columns>
    <columns>DisplayName</columns>
    <columns>SsoStatus</columns>
    <columns>MemberType</columns>
    <columns>OrgStatus</columns>
    <columns>OrgEdition</columns>
    <columns>Instance</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>